--- a/index.html
+++ b/index.html
@@ -15,13 +15,12 @@
 			<div class="night" id="night"></div> 
 	
 	
-	
+	<div class="datum" id="datumdisplay"></div>
 	<div class="clock"> 
-		
 		<div class="hour">
 			<div class="hr" id="hr"></div>
 		</div>
-		
+
 		<div class="min">
 			<div class="mn" id="mn"></div>
 		</div>
@@ -55,6 +54,15 @@
 			mn.style.transform = `rotateZ(${mm}deg)`;
 			sc.style.transform = `rotateZ(${ss}deg)`;
 			
+			//DATUM//
+			var date = day.getDate();
+			var month = day.getMonth();
+			var year = day.getFullYear();
+			var datum = date + "-" + month + "-" + year ;
+			document.getElementById("datumdisplay").innertext = datum;
+			document.getElementById("datumdisplay").textContent = datum;
+			
+			
 			//DIGITAL CLOCK//
 			let hour = document.querySelector("#hour");
 			let minutes = document.querySelector("#minutes");
@@ -65,6 +73,8 @@
 			let m = new Date().getMinutes();
 			let s = new Date().getSeconds();
 			var am = "AM"; 
+			
+			
 			
 			//BACKGROUND//
 			var bgswitch = document.getElementById('bgswitch');
@@ -124,6 +134,7 @@
 			minutes.innerHTML = m+":";
 			seconds.innerHTML = s+"&nbsp";
 			ampm.innerHTML = am;
+			
 		});
 	</script>
 </body>
