--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	
+	<div class="datum" id="datumdisplay"></div>
 	<div class="bgswitch" id="bgswitch">
 			<div class="sunrise" id="sunrise"></div>
 			<div class="daytime" id="daytime"></div>
